force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Rating__c</fullName>
    <description>This field indicates the risk rating associated with the borrower</description>
    <label>Risk Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>