force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Scenario_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Scenario_Description__c</fullName>
    <description>The system populates this field with the scenario description. By default, it is blank.</description>
    <label>Scenario Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>