force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Scenario_Type__c</fullName>
    <description>The system populates this field with the scenario type. By default, it is blank.</description>
    <label>Scenario Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternative</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>