force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Scenario_Weight__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Scenario_Weight__c</fullName>
    <description>The system populates this field with the scenario weight. By default, it is blank.</description>
    <label>Scenario Weight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>