force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Spread__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread__c</fullName>
    <description>This field indicates the Spread related to the Index for pricing Floating and Adjustable loans.</description>
    <label>Spread</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>