force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Target_ROA__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Target_ROA__c</fullName>
    <description>The system populates the scenario financial statement Target ROA. By default, it is blank.</description>
    <label>Target ROA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>