force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Tax_Exempt_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tax_Exempt_Status__c</fullName>
    <description>This field indicates the Tax Exempt status of the loan</description>
    <label>Tax Exempt Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>