force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Cost__c</fullName>
    <description>This currency field auto-populates after pricing option calculations. It indicates the total cost over the life of the product for this pricing option.</description>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>