force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Total_Interest__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Interest__c</fullName>
    <description>The system automatically populates this field to display the interest paid by a borrower over the life of a loan calculated as a percentage of the Amount Financed. By default, this field is blank.</description>
    <label>Interest Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>