force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Total_Payment_Over_5_Years__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Payment_Over_5_Years__c</fullName>
    <description>The system automatically populates this optional currency field to indicate the total amount the borrower pays over the first five years of the loan term. This amount includes principal, interest, and loan costs. By default, this field is blank.</description>
    <inlineHelpText>This field indicates the total principal, interest,  and loan costs the borrower pays over the first five years of the loan term.</inlineHelpText>
    <label>Total Payment Over 5 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>