force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Utilization__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Utilization__c</fullName>
    <description>Users populate this field to manipulate what the expected utilization is for a Line of Credit product. By default, it is blank.</description>
    <inlineHelpText>Populate this field with the percentage of a line of credit that a borrower is expected to draw down.</inlineHelpText>
    <label>Utilization</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>